todo/todo-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-fe
  labels:
    app: todo-fe
spec:
  selector:
    app: todo-fe
  ports:
    - port: 3000
      targetPort: 3000
