todo/todo-fe/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-fe
spec:
  to:
    kind: Service
    name: todo-fe
  port:
    targetPort: 3000
  tls:
    termination: edge
